v0:
- initial framework
- contains only the matrix-render interface and the renderer itself

v1:
- introduced the clock and frame updates

v2:

- introduced the player, collectibles, reorganized functions and code
- introduced movement

v3:

- slight code simplification
- better documentation

v4: - 25/11/2023

- new sprites and infrastructure for sprite creation is now (temporarily, most likely) inside the project within separate folders.
- player movement now also changes the direction the player's sprite is facing

v5: - 25/11/2023

- reworked sprite and render system to allow for spritesheets
- playerstates are extremely modular as a result of the change above, and code was dramatically simplified
- condensed char sprites into "char.data"

v6: - 27/11/2023

- overhauled level loading system to allow for multiple levels.

v7: - 28/11/2023

- slight updates to level loading system
- tickrate system overhaul
- new movement system based on recharging "stamina" (not visible to the player but affects movement)
- fixed strange visual flickering when performing special (spacebar)
- reorganized some sprites into spritesheets for later use
- documentation updated

v8 - 29/11/2023

- modularized stamina system (now, changing max stamina only requires changing the constant in memory)
- introduced basic player special functionality - breaking and building blocks (no animation)