@@ -1,0 +1,132 @@
+# Spritesheet, jump is 256, 8 images
+char: .word 16, 16
+.byte 199,199,199,199,199,199,199,10,10,10,199,199,199,199,199,199,
+199,199,199,199,199,199,10,47,55,10,199,199,199,199,199,199,
+199,199,199,199,199,10,47,47,47,47,10,199,199,199,199,199,
+199,199,199,199,10,47,55,55,10,10,47,10,199,199,199,199,
+199,199,199,199,10,55,47,47,47,55,47,10,199,199,199,199,
+199,199,199,10,47,55,55,55,55,55,55,47,10,199,199,199,
+199,199,199,10,55,47,55,55,55,55,55,47,10,199,199,199,
+199,199,1,1,55,55,55,55,55,47,47,55,1,1,199,199,
+199,199,1,55,1,55,55,55,55,55,55,1,55,1,199,199,
+199,10,55,55,55,55,55,55,55,55,55,55,55,47,10,199,
+199,10,47,55,55,55,55,55,55,55,55,55,55,47,10,199,
+199,10,47,55,55,55,55,55,55,55,55,55,47,47,10,199,
+199,199,10,47,47,55,55,55,55,55,47,47,47,10,199,199,
+199,199,65,10,47,47,47,47,47,47,47,47,10,65,199,199,
+199,65,130,130,10,10,10,10,10,10,10,10,130,130,65,199,
+199,65,65,65,65,199,199,199,199,199,199,65,65,65,65,199,
+199,199,199,199,199,199,10,10,10,199,199,199,199,199,199,199,
+199,199,199,199,199,199,10,55,47,10,199,199,199,199,199,199,
+199,199,199,199,199,10,47,47,47,47,10,199,199,199,199,199,
+199,199,199,199,10,55,10,10,55,55,47,10,199,199,199,199,
+199,199,199,199,10,55,55,47,47,47,47,10,199,199,199,199,
+199,199,199,10,47,55,55,55,55,55,55,47,10,199,199,199,
+199,199,199,10,55,47,47,55,55,47,47,55,10,199,199,199,
+199,199,1,1,1,1,1,1,1,1,1,1,1,1,199,199,
+199,199,1,1,1,1,1,55,55,1,1,1,1,1,199,199,
+199,10,55,1,1,1,55,55,55,55,1,1,1,47,10,199,
+199,10,47,55,55,55,55,55,55,55,55,47,55,47,10,199,
+199,10,47,55,55,1,1,1,1,1,1,55,47,47,10,199,
+199,199,10,47,47,1,47,47,47,47,1,47,47,10,199,199,
+199,199,65,65,65,1,47,1,1,47,1,65,65,65,199,199,
+199,65,130,130,65,1,1,1,1,1,1,65,130,130,65,199,
+199,65,65,65,65,199,199,199,199,199,199,65,65,65,65,199,
+199,199,199,199,199,199,199,10,10,199,199,199,199,199,199,199,
+199,199,199,199,199,199,199,10,47,10,199,199,199,199,199,199,
+199,199,199,199,199,199,10,55,47,47,10,199,199,199,199,199,
+199,199,199,199,199,10,47,55,55,55,10,199,199,199,199,199,
+199,199,199,199,199,10,55,47,47,47,55,10,199,199,199,199,
+199,199,199,199,10,55,10,55,55,55,55,47,10,199,199,199,
+199,199,199,199,10,55,55,55,55,55,47,47,10,199,199,199,
+199,199,199,10,47,55,55,55,47,55,55,55,47,10,199,199,
+199,199,1,55,47,47,55,47,55,55,1,1,47,10,199,199,
+199,1,1,1,1,1,1,1,1,1,1,55,1,47,10,199,
+199,199,1,1,55,1,1,1,1,55,55,55,55,47,10,199,
+199,199,10,47,55,55,1,1,55,55,55,55,47,47,10,199,
+199,199,1,1,1,47,55,55,55,55,47,47,47,47,10,199,
+199,199,1,47,47,1,47,47,47,65,65,65,47,10,199,199,
+199,199,199,1,1,1,10,10,65,130,130,65,10,199,199,199,
+199,199,199,199,65,65,65,199,65,65,65,65,199,199,199,199,
+199,199,199,199,199,199,199,10,10,199,199,199,199,199,199,199,
+199,199,199,199,199,199,10,47,10,199,199,199,199,199,199,199,
+199,199,199,199,199,10,47,47,55,10,199,199,199,199,199,199,
+199,199,199,199,199,10,55,55,55,47,10,199,199,199,199,199,
+199,199,199,199,10,55,47,47,47,55,10,199,199,199,199,199,
+199,199,199,10,55,55,55,55,55,10,55,10,199,199,199,199,
+199,199,199,10,47,55,55,55,55,55,55,10,199,199,199,199,
+199,199,10,47,55,47,47,55,55,55,55,47,10,199,199,199,
+199,199,10,47,1,1,55,55,55,55,47,47,10,1,199,199,
+199,10,47,1,55,1,1,1,1,1,1,1,1,1,1,199,
+199,10,47,55,55,55,55,1,1,1,1,47,1,1,199,199,
+199,10,47,55,55,55,55,55,1,1,55,47,47,10,199,199,
+199,10,47,47,55,55,55,55,55,55,47,1,1,1,199,199,
+199,199,10,47,65,65,65,47,47,47,1,47,47,1,199,199,
+199,199,199,10,65,130,130,65,10,10,1,1,1,199,199,199,
+199,199,199,199,65,65,65,65,199,65,65,65,199,199,199,199,
+199,199,111,111,199,199,199,199,10,10,199,199,199,199,111,199,
+199,111,199,199,111,199,199,10,47,10,111,199,199,111,199,111,
+199,111,199,199,111,199,10,47,47,10,199,111,199,199,111,199,
+199,199,111,111,199,10,47,55,55,47,10,199,199,199,199,199,
+199,111,199,199,10,55,55,47,55,55,47,10,199,199,199,111,
+111,199,111,199,10,47,55,55,55,47,47,10,199,111,199,199,
+199,111,1,1,47,55,55,55,47,55,55,47,1,1,199,199,
+199,199,1,47,1,55,55,55,55,55,55,1,55,1,199,199,
+199,10,47,55,55,55,55,55,55,55,55,55,55,47,10,199,
+10,55,55,55,55,55,55,55,55,55,55,55,47,55,47,10,
+10,47,55,55,55,55,55,55,55,55,55,55,47,55,47,10,
+10,47,55,55,65,65,65,55,55,65,65,65,55,47,47,10,
+199,10,47,65,130,130,65,55,55,65,130,130,65,47,10,199,
+199,10,47,47,65,65,55,55,55,47,65,65,47,47,10,199,
+199,199,10,10,10,47,47,47,47,47,47,10,10,10,199,199,
+199,199,199,199,199,10,10,10,10,10,10,199,199,199,199,199,
+199,111,199,199,199,199,10,10,199,199,199,199,111,111,199,199,
+111,199,111,199,199,111,10,47,10,199,199,111,199,199,111,199,
+199,111,199,199,111,199,10,55,47,10,199,111,199,199,111,199,
+199,199,199,199,199,10,47,47,55,55,10,199,111,111,199,199,
+111,199,199,199,10,55,55,55,55,55,47,10,199,199,111,199,
+199,199,111,199,10,47,55,55,47,47,55,10,199,111,199,111,
+199,199,1,1,1,1,1,1,1,1,1,1,1,1,111,199,
+199,199,1,1,1,1,1,55,55,1,1,1,1,1,199,199,
+199,10,47,1,1,1,55,55,55,55,1,1,1,47,10,199,
+10,47,55,55,55,55,55,55,55,55,55,55,55,47,47,10,
+10,47,55,55,55,55,1,1,1,1,55,55,55,55,47,10,
+10,47,55,55,55,1,47,47,47,47,1,55,47,55,47,10,
+65,10,47,55,55,1,47,13,13,47,1,47,55,47,10,65,
+65,65,47,47,47,1,47,1,1,47,1,47,47,47,65,65,
+199,199,10,10,10,1,47,1,1,47,1,10,10,10,199,199,
+199,199,199,199,199,10,1,1,1,1,10,199,199,199,199,199,
+199,10,10,10,10,199,199,199,111,199,199,199,111,111,199,199,
+199,10,47,55,47,10,199,111,199,111,199,111,199,199,111,199,
+199,10,10,55,55,47,10,199,111,199,199,111,199,199,111,199,
+199,199,10,47,55,55,47,10,199,199,199,199,111,111,199,199,
+111,199,10,10,55,55,55,47,10,199,199,199,199,199,111,199,
+199,111,10,55,55,55,55,55,47,10,10,199,199,111,199,111,
+111,199,10,47,55,55,55,47,10,55,55,10,10,199,111,199,
+199,199,199,10,47,47,55,55,55,1,1,55,47,10,199,199,
+199,111,199,10,47,55,55,1,1,47,1,47,55,47,10,199,
+199,199,1,1,1,1,1,47,47,55,55,55,47,55,47,10,
+199,199,1,1,1,1,47,55,55,55,55,47,47,47,47,10,
+199,199,199,1,1,55,55,55,55,55,47,55,65,65,65,10,
+199,199,1,1,47,55,55,55,55,55,55,65,130,130,65,199,
+199,1,47,47,1,47,47,55,55,55,47,47,65,65,10,199,
+199,199,1,1,1,47,47,47,47,47,47,10,10,10,199,199,
+199,199,199,199,199,10,10,10,10,10,10,199,199,199,199,199,
+199,199,111,111,199,199,199,111,199,199,199,10,10,10,10,199,
+199,111,199,199,111,199,111,199,111,199,10,55,47,47,10,199,
+199,111,199,199,111,199,199,111,199,10,55,55,55,10,10,199,
+199,199,111,111,199,199,199,199,10,47,55,55,47,10,199,199,
+199,111,199,199,199,199,199,10,47,55,55,55,10,10,199,111,
+111,199,111,199,199,10,10,47,55,55,55,47,47,10,111,199,
+199,111,199,10,10,55,55,10,47,55,55,55,47,10,199,111,
+199,199,10,47,55,1,1,55,55,55,47,47,10,199,199,199,
+199,10,47,55,55,1,47,1,1,55,55,47,10,199,111,199,
+10,47,55,55,55,55,55,47,47,1,1,1,1,1,199,199,
+10,47,47,55,55,55,55,55,55,47,1,1,1,1,199,199,
+10,65,65,65,55,55,55,55,55,55,47,1,1,199,199,199,
+199,65,130,130,65,55,55,55,55,47,55,47,1,1,199,199,
+199,10,65,65,47,55,55,55,47,47,47,1,47,47,1,199,
+199,199,10,10,10,47,47,47,47,47,47,1,1,1,199,199,
+199,199,199,199,199,10,10,10,10,10,10,199,199,199,199,199,
+
+
