@@ -1,0 +1,68 @@
+# Spritesheet, jump is 256, 
+enemy_dudu: .word 16, 16
+.byte 199,199,247,199,199,80,80,80,80,80,80,199,199,247,199,199,
+199,199,247,199,199,80,104,96,96,96,80,199,199,247,199,199,
+199,247,255,199,199,199,80,104,96,80,199,199,199,255,247,199,
+199,247,255,199,80,80,80,104,96,80,80,80,199,255,247,199,
+247,255,255,255,80,96,104,104,104,104,96,80,255,255,255,247,
+247,255,247,80,96,104,104,104,104,96,104,96,80,247,255,247,
+199,247,247,80,104,96,104,104,104,96,104,96,80,247,247,199,
+199,199,199,80,96,104,104,104,104,104,96,96,80,199,199,199,
+199,199,199,80,96,96,104,104,104,104,96,104,80,199,199,199,
+199,199,80,96,104,104,104,104,104,104,96,104,96,80,199,199,
+199,199,80,96,96,104,104,104,104,104,104,96,96,80,199,199,
+199,199,80,96,104,104,104,104,104,104,96,96,96,80,199,199,
+199,199,80,96,96,104,96,104,104,96,104,96,96,80,199,199,
+199,199,80,80,96,96,96,96,96,96,96,96,80,80,199,199,
+199,69,79,80,80,80,80,80,80,80,80,80,80,79,69,199,
+199,69,69,69,69,199,199,199,199,199,199,69,69,69,69,199,
+199,199,247,199,199,80,80,80,80,80,80,199,199,247,199,199,
+199,199,247,199,199,80,104,96,96,96,80,199,199,247,199,199,
+199,247,255,199,199,199,80,104,96,80,199,199,199,255,247,199,
+199,247,255,199,80,80,80,104,96,80,80,80,199,255,247,199,
+247,255,255,255,96,96,104,104,104,96,96,96,255,255,255,247,
+247,255,247,80,247,247,104,104,104,104,247,247,80,247,255,247,
+199,247,247,80,247,1,104,104,104,104,1,247,80,247,247,199,
+199,199,199,80,247,247,96,104,104,96,247,247,80,199,199,199,
+199,199,199,80,96,80,104,104,96,96,80,104,80,199,199,199,
+199,199,80,96,104,104,80,104,96,80,104,96,96,80,199,199,
+199,199,80,96,96,104,104,80,80,104,96,104,96,80,199,199,
+199,199,80,96,104,104,104,104,104,104,104,96,96,80,199,199,
+199,199,80,96,96,104,247,1,1,247,96,96,96,80,199,199,
+199,199,69,69,96,96,1,247,1,1,96,96,69,69,199,199,
+199,69,79,79,69,80,80,80,80,80,80,69,79,79,69,199,
+199,69,69,69,69,199,199,199,199,199,199,69,69,69,69,199,
+199,199,199,247,199,80,80,80,80,80,80,199,247,199,199,199,
+199,199,247,255,199,80,104,104,96,96,80,199,255,247,199,199,
+199,247,255,255,199,199,80,104,96,80,199,199,255,255,247,199,
+247,255,247,199,199,80,80,104,96,80,80,199,199,255,255,247,
+247,255,255,255,80,96,104,104,104,104,80,255,255,247,255,247,
+199,247,247,80,247,247,104,104,247,247,96,255,255,255,247,199,
+199,199,80,96,1,247,104,104,1,247,104,96,247,247,199,199,
+199,199,80,104,247,247,104,104,247,247,104,96,80,199,199,199,
+199,199,80,104,80,96,104,104,96,96,104,104,96,80,199,199,
+199,80,96,80,104,104,104,96,80,80,96,104,96,80,199,199,
+199,80,96,80,80,80,80,80,104,104,104,96,96,80,199,199,
+199,80,96,104,104,104,104,104,96,96,104,96,96,80,199,199,
+199,80,96,96,247,1,1,247,104,96,96,96,96,80,199,199,
+199,199,80,96,1,247,1,1,96,69,69,69,96,80,199,199,
+199,199,199,80,80,80,80,80,69,79,79,69,80,199,199,199,
+199,199,199,199,69,69,69,199,69,69,69,69,199,199,199,199,
+199,199,199,247,199,80,80,80,80,80,80,199,247,199,199,199,
+199,199,247,255,199,80,104,104,96,96,80,199,255,247,199,199,
+199,247,255,255,199,199,80,104,96,80,199,199,255,255,247,199,
+247,255,255,199,199,80,80,104,96,80,80,199,199,247,255,247,
+247,255,247,255,255,80,104,104,104,104,96,80,255,255,255,247,
+199,247,255,255,255,96,247,247,104,104,247,247,80,247,247,199,
+199,199,247,247,96,104,247,1,104,104,247,1,96,80,199,199,
+199,199,199,80,96,104,247,247,104,104,247,247,96,80,199,199,
+199,199,80,96,104,104,96,104,104,104,96,80,104,80,199,199,
+199,199,80,96,104,104,80,80,96,104,104,96,80,96,80,199,
+199,199,80,96,96,104,104,104,80,80,80,80,80,96,80,199,
+199,199,80,96,104,104,96,104,104,104,96,104,96,96,80,199,
+199,199,80,96,96,96,104,104,247,1,1,247,96,96,80,199,
+199,199,80,96,69,69,69,96,1,1,247,1,96,80,199,199,
+199,199,199,80,69,79,79,69,80,80,80,80,80,199,199,199,
+199,199,199,199,69,69,69,69,199,69,69,69,199,199,199,199,
+
+
