@@ -1,0 +1,132 @@
+# Spritesheet, jump  256, 8 images
+enemy_tonho: .word 16, 16
+.byte 199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,
+199,247,247,247,199,65,65,65,65,65,65,199,247,247,247,199,
+247,255,255,65,65,213,204,204,213,204,204,65,65,255,255,247,
+199,199,65,204,213,204,213,213,204,213,204,213,204,65,199,199,
+199,65,213,204,213,213,213,204,213,213,204,213,204,213,65,199,
+199,65,204,213,204,213,213,204,213,213,213,204,213,204,65,199,
+65,204,213,204,213,213,204,213,213,213,204,213,213,204,204,65,
+65,213,204,213,213,213,213,204,213,204,213,213,204,213,204,65,
+65,204,213,213,213,204,213,213,204,213,213,204,213,204,204,65,
+65,204,204,213,213,213,213,213,204,204,213,213,204,213,204,65,
+65,204,213,204,213,213,204,204,213,213,204,213,213,204,204,65,
+65,204,204,213,204,213,213,213,213,204,213,213,204,204,204,65,
+199,65,204,204,213,204,213,213,213,213,204,204,213,204,65,199,
+199,199,25,25,204,204,204,213,213,204,204,204,25,25,199,199,
+199,25,34,34,25,65,65,65,65,65,65,25,34,34,25,199,
+199,25,25,25,25,199,199,199,199,199,199,25,25,25,25,199,
+199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,
+199,247,247,247,199,65,65,65,65,65,65,199,247,247,247,199,
+247,255,255,247,65,213,213,204,213,204,204,65,247,255,255,247,
+199,199,247,204,213,213,213,213,204,213,204,213,204,247,199,199,
+199,65,213,213,65,65,213,213,213,213,65,65,204,213,65,199,
+199,65,204,213,204,65,65,213,213,65,65,204,213,204,65,199,
+65,213,213,204,213,213,213,213,213,213,213,213,213,204,204,65,
+65,213,204,213,213,213,204,213,213,204,213,213,204,213,204,65,
+65,204,213,213,213,79,79,79,79,71,71,213,213,204,204,65,
+65,204,204,213,79,255,87,87,87,87,255,71,204,213,204,65,
+65,204,213,213,79,247,71,71,71,71,247,71,213,204,204,65,
+65,204,204,213,79,87,87,87,87,87,87,71,204,204,204,65,
+199,65,204,204,213,71,79,71,79,71,71,204,213,204,65,199,
+199,199,25,25,204,204,204,213,213,204,204,204,25,25,199,199,
+199,25,34,34,25,65,65,65,65,65,65,25,34,34,25,199,
+199,25,25,25,25,199,199,199,199,199,199,25,25,25,25,199,
+199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,
+199,199,247,247,65,65,65,65,65,65,65,199,247,247,247,199,
+199,247,255,65,213,204,213,213,204,204,204,247,247,255,255,247,
+199,199,65,213,204,213,213,213,213,213,204,204,204,247,199,199,
+199,65,65,65,213,213,213,213,65,65,204,204,213,204,65,199,
+199,65,204,65,65,213,213,65,65,204,213,213,213,204,65,199,
+65,204,204,213,213,213,213,213,213,213,213,213,204,213,204,65,
+65,213,204,213,204,213,204,213,213,213,213,213,204,213,204,65,
+65,204,213,79,79,79,71,71,213,213,213,204,213,204,204,65,
+65,213,79,255,87,87,87,255,71,213,213,213,204,213,204,65,
+65,204,79,247,71,71,71,247,71,213,213,213,213,204,204,65,
+199,65,79,87,87,87,87,87,71,213,213,204,213,204,204,65,
+199,65,204,79,71,79,71,71,213,213,204,213,204,204,65,199,
+199,199,65,204,213,213,213,204,204,25,25,25,204,65,199,199,
+199,199,199,65,65,65,65,65,25,34,34,25,65,199,199,199,
+199,199,199,199,25,25,25,199,25,25,25,25,199,199,199,199,
+199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,199,
+199,247,247,247,199,65,65,65,65,65,65,65,247,247,199,199,
+247,255,255,247,247,204,204,213,213,204,204,204,65,255,247,199,
+199,199,247,204,213,204,213,213,213,213,213,204,213,65,199,199,
+199,65,204,213,204,204,65,65,213,213,213,213,65,65,65,199,
+199,65,204,213,213,213,204,65,65,213,213,65,65,204,65,199,
+65,204,213,204,213,213,213,213,213,213,213,213,213,204,204,65,
+65,204,213,213,213,213,213,213,213,204,213,204,213,213,204,65,
+65,204,204,213,213,213,213,213,71,71,79,79,79,204,204,65,
+65,204,213,204,213,213,213,71,255,87,87,87,255,79,213,65,
+65,204,204,213,213,213,213,71,247,71,71,71,247,79,204,65,
+65,204,204,213,204,213,213,71,87,87,87,87,87,79,65,199,
+199,65,204,204,213,204,213,213,71,71,79,71,79,204,65,199,
+199,199,65,204,25,25,25,204,204,213,204,204,204,65,199,199,
+199,199,199,65,25,34,34,25,65,65,65,65,65,199,199,199,
+199,199,199,199,25,25,25,25,199,25,25,25,199,199,199,199,
+199,199,199,199,199,67,67,67,67,67,67,199,199,199,199,199,
+199,247,247,67,67,207,134,207,134,134,207,67,67,247,247,199,
+247,255,67,207,207,134,207,134,207,134,134,207,207,67,255,247,
+199,67,207,134,207,207,207,207,134,207,207,207,207,207,67,199,
+199,67,207,207,134,207,207,207,207,134,134,207,134,207,67,199,
+67,207,134,207,134,207,134,207,134,207,207,134,207,134,207,67,
+67,134,207,134,207,207,207,134,207,207,207,207,207,134,134,67,
+67,207,134,207,134,207,207,207,134,134,207,207,134,207,134,67,
+67,134,207,207,134,207,134,207,134,207,207,207,207,134,134,67,
+67,134,134,207,207,207,207,134,207,207,134,207,134,207,134,67,
+67,134,207,207,207,134,207,207,134,207,207,134,207,134,134,67,
+25,67,134,207,134,207,207,207,134,207,134,207,207,134,67,25,
+25,67,134,134,207,207,207,134,207,207,134,207,134,134,67,25,
+199,25,67,134,207,134,207,207,207,207,207,134,134,67,25,199,
+199,199,199,67,67,67,207,134,134,134,67,67,67,199,199,199,
+199,199,199,199,199,199,67,67,67,67,199,199,199,199,199,199,
+199,199,199,199,199,67,67,67,67,67,67,199,199,199,199,199,
+199,247,247,247,67,207,134,207,134,134,134,67,247,247,247,199,
+247,255,255,247,207,207,207,134,207,134,134,207,247,255,255,247,
+199,67,247,134,67,67,67,207,134,67,67,67,134,247,67,199,
+199,67,207,207,67,255,67,207,207,67,255,67,134,207,67,199,
+67,207,134,207,67,67,67,207,207,67,67,67,207,134,207,67,
+67,134,207,134,207,207,134,207,207,134,207,207,207,134,134,67,
+67,207,134,207,207,79,79,79,71,71,71,207,134,207,134,67,
+67,134,207,207,79,87,87,87,87,87,87,71,207,134,134,67,
+67,134,134,79,87,1,1,1,1,1,1,87,71,207,134,67,
+67,134,207,79,87,255,1,1,1,1,255,87,71,134,134,67,
+25,25,25,79,87,247,1,1,1,1,247,87,71,25,25,25,
+25,34,34,25,79,87,87,87,87,87,87,71,25,34,34,25,
+199,25,25,25,207,71,79,71,79,71,71,134,25,25,25,199,
+199,199,199,67,67,67,207,134,134,134,67,67,67,199,199,199,
+199,199,199,199,199,199,67,67,67,67,199,199,199,199,199,199,
+199,199,247,247,67,67,67,67,67,67,199,199,247,247,247,199,
+199,247,255,247,134,134,134,134,134,134,67,247,247,255,255,247,
+199,199,255,134,207,134,207,207,134,134,134,247,255,247,255,199,
+199,67,134,67,67,67,207,67,67,67,207,134,134,247,199,199,
+199,67,134,67,255,67,207,67,255,67,207,134,207,134,67,199,
+67,134,207,67,67,67,207,67,67,67,207,207,134,134,67,199,
+67,134,207,207,134,207,134,207,207,207,207,207,134,134,134,67,
+67,207,207,79,79,79,71,71,207,207,207,207,134,207,134,67,
+67,134,79,87,87,87,87,87,71,207,207,134,207,134,134,67,
+67,207,79,1,1,1,1,1,87,71,207,207,134,207,134,67,
+67,134,79,255,1,1,1,255,87,71,207,134,134,134,134,67,
+67,207,79,247,1,1,1,247,87,71,207,207,134,25,25,25,
+67,207,71,87,87,87,87,87,71,207,134,134,25,34,34,25,
+199,67,207,71,71,71,71,71,207,207,207,134,25,25,25,25,
+199,199,67,67,134,207,207,207,207,134,134,67,67,199,199,199,
+199,199,199,199,67,67,67,67,67,67,67,199,199,199,199,199,
+199,247,247,247,199,199,67,67,67,67,67,67,247,247,199,199,
+247,255,255,247,247,67,134,134,134,134,134,134,247,255,247,199,
+199,255,247,255,247,134,134,134,207,207,134,207,134,255,199,199,
+199,199,247,134,134,207,67,67,67,207,67,67,67,134,67,199,
+199,67,134,207,134,207,67,255,67,207,67,255,67,134,67,199,
+199,67,134,207,207,207,67,67,67,207,67,67,67,207,134,67,
+67,134,207,134,207,207,207,207,207,134,207,134,207,134,134,67,
+67,134,207,134,207,207,207,207,71,71,79,79,79,207,207,67,
+67,134,134,207,134,207,207,71,87,87,87,87,87,79,134,67,
+67,134,207,134,207,207,71,87,1,1,1,1,1,79,207,67,
+67,134,134,207,207,207,71,87,255,1,1,1,255,79,134,67,
+25,25,25,134,207,207,71,87,247,1,1,1,247,79,134,67,
+25,34,34,25,207,134,207,71,87,87,87,87,87,71,134,67,
+25,25,25,25,134,207,207,207,71,71,71,71,71,134,67,199,
+199,199,199,67,67,134,134,207,207,207,207,134,67,67,199,199,
+199,199,199,199,199,67,67,67,67,67,67,67,199,199,199,199,
+
+
